--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-<script type="module" src="/js/index.js"></script>
+<script type="module" src="js/index.js"></script>
 </body>
 
 </html>
