--- a/task-list/addSubNumbers.html
+++ b/task-list/addSubNumbers.html
@@ -36,7 +36,7 @@
  
 
 <script  src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.5.0/math.min.js"></script>
-<script type="module" src="/js/script4.js"></script>	
+<script type="module" src="../js/script4.js"></script>	
 
 </body>
 
