--- a/task-list/compare.html
+++ b/task-list/compare.html
@@ -40,7 +40,7 @@
  
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.5.0/math.min.js"></script>
-<script type="module" src="/js/script3.js"></script>	
+<script type="module" src="../js/script3.js"></script>	
 </body>
 
 </html>
